# hlbc

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  justfile
.github/workflows/: deploy-gui.yml  release-cli.yml  release-gui.yml  release.yml
crates/cli/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/cli/src/: command.rs  main.rs
crates/decompiler/: CHANGELOG.md  Cargo.toml
crates/decompiler/src/: ast.rs  fmt.rs  lib.rs  post.rs
crates/decompiler/src/alt/: bb.rs  flow.rs  mod.rs
crates/derive/: Cargo.toml  README.md
crates/derive/src/: lib.rs
crates/gui/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/gui/assets/: hlbc.sublime-syntax
crates/gui/examples/: .gitignore  Basic.hl  Basic.hx  justfile
crates/gui/src/: about.rs  examples.rs  image_loader.rs  lib.rs  main.rs  model.rs  shortcuts.rs  style.rs  theme.rs
crates/gui/src/views/: callgraph.rs  classes.rs  decompiler.rs  files.rs  functions.rs  globals.rs  haxe_source_view.rs  info.rs  inspector.rs  mod.rs  search.rs  source.rs  strings.rs
crates/gui/web/: build.sh  index.html
crates/hlbc/: CHANGELOG.md  Cargo.toml  README.md
crates/hlbc/src/: fmt.rs  lib.rs  opcodes.rs  read.rs  types.rs  write.rs
crates/hlbc/src/analysis/: files.rs  graph.rs  mod.rs  usage.rs
crates/indexing/: Cargo.toml  README.md
crates/indexing/src/: lib.rs
crates/indexing/src/tantivy/: mod.rs  tokenizer.rs
data/: Anonymous.hx  ArrayAccezz.hx  Arrays.hx  Branch.hx  BranchExpr.hx  BranchNested.hx  Clazz.hx  Closure.hx  Constructor.hx  Empty.hx  Enums.hx  LoopBreak.hx  LoopContinue.hx  LoopForEach.hx  LoopInfinite.hx  LoopWhile.hx  Method.hx  README.md  SpecialOpcodes.hx  StringConcat.hx  StringInterp.hx  Switch.hx  Trace.hx  TryCatch.hx  build.bat  justfile
hlbc/: CHANGELOG.md  Cargo.toml
hlbc-cli/: CHANGELOG.md  Cargo.toml  README.md
hlbc-cli/src/: command.rs  decompiler.rs  graph.rs  main.rs  parser.rs  utils.rs
hlbc-cli/src/decompiler/: ast.rs  fmt.rs  mod.rs
hlbc-decompiler/: CHANGELOG.md  Cargo.toml  README.md
hlbc-decompiler/src/: ast.rs  fmt.rs  lib.rs  post.rs  scopes.rs
hlbc-decompiler/src/alt/: bb.rs  mod.rs
hlbc-derive/: Cargo.toml
hlbc-derive/src/: lib.rs
hlbc-gui/: CHANGELOG.md  Cargo.toml  README.md  index.html
hlbc-gui/assets/: Haxe.sublime-syntax
hlbc-gui/src/: main.rs
hlbc-gui/src/views/: callgraph.rs  classes.rs  decompiler.rs  disassembly.rs  functions.rs  globals.rs  info.rs  inspector.rs  mod.rs  strings.rs
hlbc-gui/web/: index.html
hlbc-macros/: Cargo.toml
hlbc-macros/src/: lib.rs
hlbc/src/: deser.rs  fmt.rs  lib.rs  opcodes.rs  ser.rs  types.rs
hlbc/src/analysis/: graph.rs  mod.rs
src/: analysis.rs  deser.rs  fmt.rs  lib.rs  opcodes.rs  read.rs  ser.rs  types.rs  utils.rs
src/analysis/: graph.rs  mod.rs
src/decompiler/: ast.rs  fmt.rs  mod.rs  post.rs  scopes.rs
