[package]
name = "hlbc"
version = "0.1.0"
edition = "2021"
include = ["src/**/*", "LICENSE", "README.md", "build.rs"]

[workspace]
members = ["hlbc-cli", "hlbc-macros"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hlbc-macros = { path = "hlbc-macros" }
byteorder = "1"
anyhow = "1"
strum = "0.24"
strum_macros = "0.24"
petgraph = { version = "0.6", default-features = false, features = ["graphmap"], optional = true }

[features]
default = []
graph = ["petgraph"]
