[package]
name = "hlbc-cli"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Hashlink bytecode disassembler and analyzer"
authors = ["Guillaume Anthouard <25181283+Gui-Yom@users.noreply.github.com>"]
repository = "https://github.com/Gui-Yom/hlbc"
keywords = ["hashlink", "bytecode", "disassembler", "analysis"]
categories = ["command-line-utilities", "parsing", "visualization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Result type
anyhow = "1"
# Disable colors when not a tty (piped output)
atty = "0.2"
# Command parser
# Git dependency until https://github.com/zesterer/chumsky/commit/7d692d160e4a9ed78d0122777638637039dbff2b gets published
chumsky = { version = "0.8", git = "https://github.com/zesterer/chumsky" }
# CLI args
clap = { version = "3", features = ["derive"] }
# Core functionnality
hlbc = { version = "0.3", path = "..", default-features = false }
# File system watching
notify = { version = "4", optional = true }
# cli colors
termcolor = "1"
# Temporary directory for compilation
temp-dir = "0.1"

[features]
default = ["graph", "watch"]
graph = ["hlbc/graph"]
watch = ["notify"]
