[package]
name = "hlbc-cli"
version = "0.4.0"
authors = ["Guillaume Anthouard <25181283+Gui-Yom@users.noreply.github.com>"]
edition = "2021"
rust-version = "1.56"
description = "Hashlink bytecode disassembler, analyzer and decompiler"
repository = "https://github.com/Gui-Yom/hlbc"
license = "MIT"
categories = ["command-line-utilities", "parser-implementations", "visualization", "compilers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Result type
anyhow = "1"
# Disable colors when not a tty (piped output)
atty = "0.2"
# Parser for commands
chumsky = { version = "0.8" }
# CLI args
clap = { version = "3", features = ["derive"] }
# Core functionnality
hlbc = { version = "0.4", path = "..", default-features = false }
# Decompiler
hlbc-decompiler = { version = "0.4", path = "../hlbc-decompiler" }
# File system watching
notify = { version = "4", optional = true }
# cli colors
termcolor = "1"
# Temporary directory for compilation
temp-dir = "0.1"
webbrowser = "0.7"

[features]
default = ["graph", "watch"]
# Generate a callgraph
graph = ["hlbc/graph"]
# Watch for file changes
watch = ["notify"]
