[package]
name = "hlbc-cli"
version = "0.5.0"
authors = ["Guillaume Anthouard <25181283+Gui-Yom@users.noreply.github.com>"]
edition = "2021"
rust-version = "1.64"
description = "Hashlink bytecode disassembler, analyzer and decompiler cli"
repository = "https://github.com/Gui-Yom/hlbc"
license = "MIT"
categories = ["command-line-utilities", "parser-implementations", "visualization", "compilers"]
keywords = ["hashlink", "bytecode", "disassembler", "analysis", "decompiler"]
include = ["src/**/*", "README.md", "CHANGELOG.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hlbc"
path = "src/main.rs"

[dependencies]
# Result type
anyhow = "1"
# Disable colors when not a tty (piped output)
atty = "0.2"
# Parser for commands
chumsky = { version = "0.9" }
# CLI args
clap = { version = "4", features = ["derive"] }
# Core functionnality
hlbc = { version = "0.5", path = "../hlbc", default-features = false }
# Decompiler
hlbc-decompiler = { version = "0.5", path = "../hlbc-decompiler" }
# File system watching
notify = { version = "5", optional = true, default-features = false, features = ["macos_fsevent"] }
notify-debouncer-mini = { version = "0.2", optional = true, default-features = false }
# cli colors
termcolor = "1"
# Temporary directory for compilation
temp-dir = "0.1"
webbrowser = "0.8"

[features]
default = ["graph", "watch"]
# Generate a callgraph
graph = ["hlbc/graph"]
# Watch for file changes
watch = ["notify", "notify-debouncer-mini"]
