[package]
name = "hlbc-decompiler"
version = "0.4.0"
authors = ["Guillaume Anthouard <25181283+Gui-Yom@users.noreply.github.com>"]
edition = "2021"
rust-version = "1.56"
description = "Hashlink bytecode decompiler"
repository = "https://github.com/Gui-Yom/hlbc"
license = "MIT"
keywords = ["hashlink", "bytecode", "analysis", "decompiler"]
categories = ["visualization", "compilers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Advanced formatting functionalities
fmtools = "0.1"
hlbc = { version = "0.4", path = ".." }
# Graph utilities
petgraph = { version = "0.6", default-features = false, features = ["graphmap"], optional = true }

[features]
default = []
alt = []
alt-graph = ["alt", "petgraph"]
