[package]
name = "hlbc-gui"
version = "0.4.0"
authors = ["Guillaume Anthouard <25181283+Gui-Yom@users.noreply.github.com>"]
edition = "2021"
rust-version = "1.62"
description = "Hashlink bytecode disassembler, analyzer and decompiler cli"
repository = "https://github.com/Gui-Yom/hlbc"
license = "MIT"
categories = ["command-line-utilities", "parser-implementations", "visualization", "compilers"]
include = ["src/**/*", "README.md", "CHANGELOG.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hlbcw"
path = "src/main.rs"

[dependencies]
# AIO GUI framework
eframe = { version = "0.19" }
# Docking tabs
#egui_dock = { version = "0.1", git = "https://github.com/Adanos020/egui_dock" }
egui_dock = { version = "0.1", path = "../../egui_dock" }
# Core library
hlbc = { version = "0.4", path = "../hlbc", default-features = false }
# Decompiler
hlbc-decompiler = { version = "0.4", path = "../hlbc-decompiler", default-features = false }
# Open file dialogs
rfd = "0.10"


[features]
default = ["callgraph"]
callgraph = ["hlbc/graph"]
