[package]
name = "hlbc-gui"
version = "0.1.0"
authors = ["Guillaume Anthouard <25181283+Gui-Yom@users.noreply.github.com>"]
edition = "2021"
rust-version = "1.65"
description = "Hashlink bytecode disassembler, analyzer and decompiler gui"
repository = "https://github.com/Gui-Yom/hlbc"
license = "MIT"
categories = ["command-line-utilities", "parser-implementations", "visualization", "compilers"]
keywords = ["hashlink", "bytecode", "haxe", "disassembler", "reverse-enginneering"]
include = ["src/**/*", "README.md", "CHANGELOG.md", "assets/Haxe.sublime-syntax"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# AIO GUI framework
eframe = { version = "0.21" }
# Docking tabs
egui_dock = { version = "0.5" } #, git = "https://github.com/Adanos020/egui_dock" }
# Core library
hlbc = { version = "0.5", path = "../hlbc", default-features = false }
# Decompiler
hlbc-decompiler = { version = "0.5", path = "../hlbc-decompiler", default-features = false }
poll-promise = { version = "0.2" }
# Open file dialogs
rfd = { version = "0.11", features = ["file-handle-inner"] }
syntect = { version = "5", default-features = false, features = ["parsing", "yaml-load", "default-themes"] }
webbrowser = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"

[features]
default = ["callgraph", "native"]
callgraph = ["hlbc/graph"]
web = ["syntect/regex-fancy", "poll-promise/web"]
native = ["syntect/regex-onig"]
