[package]
name = "hlbc"
version = "0.6.0"
authors = ["Guillaume Anthouard <25181283+Gui-Yom@users.noreply.github.com>"]
edition = "2021"
rust-version = "1.56"
description = "Hashlink bytecode disassembler and analyzer"
repository = "https://github.com/Gui-Yom/hlbc"
license = "MIT"
keywords = ["hashlink", "bytecode", "haxe", "disassembler", "reverse-enginneering"]
categories = ["parser-implementations", "visualization", "compilers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Endianess utilities
byteorder = "1"
# Advanced formatting functionalities
fmtools = "0.1"
# Compile time code generation for hlbc::Opcode
hlbc-derive = { version = "0.6", path = "../hlbc-derive" }
# Graph utilities
petgraph = { version = "0.6", default-features = false, features = ["graphmap"], optional = true }
# Error types
thiserror = "1"

[features]
default = ["graph"]
# Generate a callgraph
graph = ["petgraph"]
