[package]
name = "hlbc-cli"
version = "0.8.0"
rust-version = "1.70"
description = "Hashlink bytecode disassembler, analyzer and decompiler cli"
categories = ["command-line-utilities", "parser-implementations", "visualization", "compilers"]
keywords = ["hashlink", "bytecode", "haxe", "disassembler", "reverse-enginneering"]
include = ["src/**/*", "README.md", "CHANGELOG.md"]
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hlbc"
path = "src/main.rs"

[dependencies]
# Result type
anyhow = { workspace = true }
# Disable colors when not a tty (piped output)
atty = { workspace = true }
# Parser for commands
chumsky = { workspace = true }
# CLI args
clap = { workspace = true }
# Core functionnality
hlbc = { workspace = true }
# Decompiler
hlbc-decompiler = { workspace = true }
# File system watching
notify = { workspace = true, optional = true }
notify-debouncer-mini = { workspace = true, optional = true }
# cli colors
termcolor = { workspace = true }
# Temporary directory for compilation
temp-dir = { workspace = true }
webbrowser = { workspace = true }

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = { workspace = true }

[features]
default = ["graph", "watch"]
# Generate a callgraph
graph = ["hlbc/graph"]
# Watch for file changes
watch = ["notify", "notify-debouncer-mini"]
