[package]
name = "hlbc-decompiler"
version = "0.8.0"
rust-version = "1.64"
description = "Hashlink bytecode decompiler"
keywords = ["hashlink", "bytecode", "haxe", "disassembler", "reverse-enginneering"]
categories = ["visualization", "compilers"]
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Advanced formatting functionalities
fmtools = { workspace = true }
hlbc = { workspace = true }
# Graph utilities
petgraph = { workspace = true, optional = true }

[features]
default = []
alt = []
alt-graph = ["alt", "petgraph"]
