[package]
name = "hlbc-derive"
version = "0.8.0"
description = "Procedural macros for the 'hlbc' crate"
rust-version = "1.61"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
