[package]
name = "hlbc-gui"
version = "0.4.0"
authors = ["Guillaume Anthouard <25181283+Gui-Yom@users.noreply.github.com>"]
edition = "2021"
rust-version = "1.72"
description = "Hashlink bytecode disassembler, analyzer and decompiler gui"
repository = "https://github.com/Gui-Yom/hlbc"
license = "MIT"
categories = ["command-line-utilities", "parser-implementations", "visualization", "compilers"]
keywords = ["hashlink", "bytecode", "haxe", "disassembler", "reverse-enginneering"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# AIO GUI framework
eframe = { version = "0.24", default-features = false }
# Docking tabs
egui_dock = { version = "0.9" }
egui_ui_refresh = { version = "0.1", path = "../../../egui_ui_refresh" }
# Core library
hlbc = { version = "0.8", path = "../hlbc", default-features = false }
# Decompiler
hlbc-decompiler = { version = "0.8", path = "../decompiler", default-features = false }
hlbc-indexing = { version = "0.8", path = "../indexing", optional = true }
# Open file dialogs
rfd = { version = "0.12", features = ["file-handle-inner"] }
webbrowser = "0.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
poll-promise = { version = "0.3" }
syntect = { version = "5", default-features = false, features = ["parsing", "yaml-load", "default-themes", "regex-onig"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
poll-promise = { version = "0.3", features = ["web"] }
syntect = { version = "5", default-features = false, features = ["parsing", "yaml-load", "default-themes", "regex-fancy"] }
wasm-bindgen-futures = "0.4"

[features]
default = ["glow", "search", "examples"]
callgraph = ["hlbc/graph"]
search = ["hlbc-indexing"]
wgpu = ["eframe/wgpu"]
glow = ["eframe/glow"]
examples = []
