[package]
name = "hlbc-gui"
version = "0.4.0"
rust-version = "1.75"
description = "Hashlink bytecode disassembler, analyzer and decompiler gui"
categories = ["command-line-utilities", "parser-implementations", "visualization", "compilers"]
keywords = ["hashlink", "bytecode", "haxe", "disassembler", "reverse-enginneering"]
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# AIO GUI framework
eframe = { workspace = true }
# Docking tabs
egui_dock = { workspace = true }
# UI theme
egui_ui_refresh = { workspace = true }
# Core library
hlbc = { workspace = true }
# Decompiler
hlbc-decompiler = { workspace = true }
# Search functionality
hlbc-indexing = { workspace = true, optional = true }
# Open file dialogs
rfd = { workspace = true }
# Open link in webbrowser
webbrowser = { workspace = true }

#[target.'cfg(not(target_os = "windows"))'.dependencies]
image = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
poll-promise = { workspace = true }
syntect = { workspace = true, features = ["parsing", "yaml-load", "default-themes", "regex-onig"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { workspace = true }
poll-promise = { workspace = true, features = ["web"] }
syntect = { workspace = true, features = ["parsing", "yaml-load", "default-themes", "regex-fancy"] }
wasm-bindgen-futures = { workspace = true }

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = { workspace = true }

[features]
default = ["glow", "search", "examples"]
callgraph = ["hlbc/graph"]
search = ["hlbc-indexing"]
wgpu = ["eframe/wgpu"]
glow = ["eframe/glow"]
examples = []
