[package]
name = "hlbc"
version = "0.8.0"
rust-version = "1.64"
description = "Hashlink bytecode disassembler and analyzer"
keywords = ["hashlink", "bytecode", "haxe", "disassembler", "reverse-enginneering"]
categories = ["parser-implementations", "visualization", "compilers"]
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Endianess utilities
byteorder = { workspace = true }
# Cheaply clonable immutable string with inline storage
flexstr = { workspace = true }
# Advanced formatting functionalities
fmtools = { workspace = true }
# Compile time code generation for hlbc::Opcode
hlbc-derive = { workspace = true }
# Search for the magic header
memchr = { workspace = true }
# Graph utilities
petgraph = { workspace = true, optional = true }
# Error types
thiserror = { workspace = true }

[features]
default = ["graph"]
# Generate a callgraph
graph = ["petgraph"]
