[package]
name = "hlbc-indexing"
version = "0.7.0"
authors = ["Guillaume Anthouard <25181283+Gui-Yom@users.noreply.github.com>"]
edition = "2021"
rust-version = "1.65"
description = "Hashlink bytecode indexer"
repository = "https://github.com/Gui-Yom/hlbc"
license = "MIT"
keywords = ["hashlink", "bytecode", "haxe", "disassembler", "reverse-enginneering"]
categories = ["parser-implementations", "visualization", "compilers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hlbc = { version = "0.7", path = "../hlbc" }
tantivy = "0.19"
sublime_fuzzy = "0.7"
fuzzy-matcher = "0.3"
