[package]
name = "hlbc-indexing"
version = "0.8.0"
rust-version = "1.64"
description = "Hashlink bytecode indexer"
keywords = ["hashlink", "bytecode", "haxe", "disassembler", "reverse-enginneering"]
categories = ["parser-implementations", "visualization", "compilers"]
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hlbc = { workspace = true }
tantivy = { workspace = true, optional = true }
sublime_fuzzy = { workspace = true }
fuzzy-matcher = { workspace = true }
